--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -9,10 +9,10 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the Spring Boot application JAR file from the build stage
-COPY --from=build /app/target/notification-service-0.0.1-SNAPSHOT.jar /app/notification-service.jar
+COPY --from=build /app/target/eureka-server-0.0.1-SNAPSHOT.jar /app/eureka-server.jar
 
 # Expose the port that the Spring Boot application will run on
-EXPOSE 8095
+EXPOSE 8099
 
 # Start the Spring Boot application
-CMD ["java", "-jar", "notification-service.jar"]
+CMD ["java", "-jar", "eureka-server.jar"]
