--- a/post-service/Dockerfile
+++ b/post-service/Dockerfile
@@ -9,10 +9,10 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the Spring Boot application JAR file from the build stage
-COPY --from=build /app/target/user-service-0.0.1-SNAPSHOT.jar /app/user-service.jar
+COPY --from=build /app/target/post-service-0.0.1-SNAPSHOT.jar /app/post-service.jar
 
 # Expose the port that the Spring Boot application will run on
-EXPOSE 8095
+EXPOSE 8085
 
 # Start the Spring Boot application
-CMD ["java", "-jar", "user-service.jar"]
+CMD ["java", "-jar", "post-service.jar"]
