--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -1,15 +1,9 @@
-# Stage 1: Build the application
-FROM maven as build
-WORKDIR /app
-COPY . .
-RUN mvn install
-
 # Stage 2: Create the runtime image
 FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the Spring Boot application JAR file from the build stage
-COPY --from=build /app/target/eureka-server-0.0.1-SNAPSHOT.jar /app/eureka-server.jar
+COPY  /target/eureka-server-0.0.1-SNAPSHOT.jar /app/eureka-server.jar
 
 # Expose the port that the Spring Boot application will run on
 EXPOSE 8099
